--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.techys.authentication">
+    package="com.techys">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,9 +9,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Authentication">
+        android:theme="@style/Theme.Splashscreen">
         <activity
-            android:name=".Login"
+            android:name=".splashscreen.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,12 +20,55 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Register"
+            android:name=".authentication.Register"
             android:exported="true"
 
             />
         <activity
-            android:name=".MainActivity"
+            android:name=".authentication.MainActivity"
+            android:exported="true"
+            />
+        <activity
+            android:name=".authentication.Login"
+            android:exported="true"
+            />
+        <activity
+            android:name=".onboarding.Onboarding"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.Homepage"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.MyBodyScreen"
+            android:exported="true"/>
+        <activity
+            android:name=".mainmenu.DecisionMakingScreen"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.PregnancyScreen"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.CommunicationScreen"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.DiseasesScreen"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.GenderEqualityScreen"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.MythBusters"
+            android:exported="true"
+            />
+        <activity
+            android:name=".mainmenu.PubertyScreen"
             android:exported="true"
             />
 
